Added new logging filter Updated name of project in build.sbt Added some configurations to handle CSRF

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -53,12 +53,20 @@ play.modules {
 
 google.analytics = "" // add google key here
 
+play.filters.enabled += "filters.LoggingFilter"
+play.filters.enabled += "play.filters.cors.CORSFilter"
+
+play.filters.disabled+=play.filters.csrf.CSRFFilter
+
 play.filters.cors {
   allowedOrigins = null
   allowedHttpMethods = null
   allowedHttpHeaders = null
   preflightMaxAge = 3 days
 }
+
+play.filters.headers.contentSecurityPolicy = null
+
 play.ws.ssl.loose.acceptAnyCertificate=true
 
 baseline = {
